--- a/_posts/2021-06-14-projects.markdown
+++ b/_posts/2021-06-14-projects.markdown
@@ -9,7 +9,7 @@ categories: jekyll update
   .tag:visited, .tag {
     border: 1px solid #3b8fff;;
     border-radius: 6px;
-    padding: 3px 5px 1px;
+    padding: 3px 5px 2px;
     color: #fff;
     background-color: #1756a9;
     font-size: small;
@@ -21,7 +21,25 @@ categories: jekyll update
   
 </style>
 
-## Graphical Architecture Editor in the Browser
+## Image Classification without Gradient Descent
+
+[![](https://raw.githubusercontent.com/lochbrunner/hippocampus/master/docs/mnist.gif)](https://raw.githubusercontent.com/lochbrunner/hippocampus/master/docs/mnist.gif)
+
+Inspired by the Hippocampus of the human brain, this small project tries to learn to classify images similarly.
+The neurons in our brain create connections when they frequently fire synchronously.
+These connections may lead to the fact that when one of these neurons gets stimulated, all the other connected neurons may be stimulated as well.
+
+The approach in this project works as follow:
+1. Create a deep CNN network with randomly initialed weights.
+2. Feed in the training samples and store the index of the neurons with the strongest activation per class. (One-shot learning)
+3. To predict a class, calculate the connection group of the neurons that fires most.
+
+<a class="tag" href="https://pytorch.org">PyTorch</a>
+<a class="tag" href="https://www.python.org">Python</a>
+
+View the code on [github](https://github.com/lochbrunner/hippocampus).
+
+## Editor for Neural Network Architectures
 
 An online platform for designing, training and sharing AI models.
 
@@ -29,6 +47,7 @@ An online platform for designing, training and sharing AI models.
 
 The user can design the network architecture without any code, just in the editor.
 When painting on the canvas, the hidden neuron states are displayed live.
+Go to the [demo]().
 
 View the code on [github](https://github.com/lochbrunner/open-go-bot).
 
@@ -38,7 +57,7 @@ View the code on [github](https://github.com/lochbrunner/open-go-bot).
 <a class="tag" href="https://redux.js.org">Redux</a>
 <a class="tag" href="https://www.tensorflow.org/js">TensorFlow.js</a>
 
-## Graph Extension VS Code
+## Graph Extension for VS Code
 
 An extension to display directed interactive graphs directly in VS Code.
 
@@ -73,7 +92,7 @@ View the code on [github](https://github.com/lochbrunner/charlie)
 <iframe width="784" height="441" src="https://www.youtube.com/embed/wWIqVlIU-r8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-### Soccer playing Robot
+### Soccer Playing Robot
 
 After playing around with Java, the first serious project I joined was a soccer-playing robot.
 Our team built up the hardware and software.
@@ -81,7 +100,7 @@ We fused the input of different sensors as ultrasonic, IR sensor and others.
 
 <a class="tag" href="https://en.wikipedia.org/wiki/C%2B%2B">C++</a>
 
-### Interactive 3D Physics simulation
+### Interactive 3D Physics Simulation
 
 The propaedeutic project during school was an interactive physics simulation capable of simulating elemental electromagnetic forces.
 A challenging part was the manipulator, which allows the user to edit all objects in the 3D scene.
@@ -90,7 +109,7 @@ A challenging part was the manipulator, which allows the user to edit all object
 <a class="tag" href="https://docs.microsoft.com/en-us/windows/win32/direct3d">Direct3d</a>
 <a class="tag" href="https://docs.microsoft.com/en-us/windows/win32/apiindex/windows-api-list">Win32 API</a>
 
-### 3D Modeling tool and Ray-Tracer
+### 3D Modeling Tool and Ray-Tracer
 
 Inspired by the 3d modeling tool Maya and its render engine, this project let the user create and manipulate polygons.
 Animations were calculated with the scripting engine of Lua.
@@ -127,7 +146,6 @@ With this, a semantic linkage between documents was possible.
 Several other projects are not listed here.
 
 <a class="tag" href="https://www.java.com">Java</a>
-<a class="tag" href="https://www.python.org">Python</a>
 <a class="tag" href="https://en.wikipedia.org/wiki/Prolog">Prolog</a>
 <a class="tag" href="https://www.lua.org">Lua</a>
 <a class="tag" href="https://golang.org">Go</a>
